force-app/main/default/objects/Contact/fields/Last_Patient_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Last_Patient_Touchpoint__c</fullName>
    <label>Last Patient Touchpoint</label>
    <type>Date</type>
</CustomField>