force-app/main/default/objects/Contact/fields/Provider_Location__c.field-meta.xml
<CustomField>
    <fullName>Provider_Location__c</fullName>
    <label>Provider Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tuffs Medical Center</fullName>
            </value>
            <value>
                <fullName>Brigham and Women&apos;s Hospital</fullName>
            </value>
            <value>
                <fullName>Boston Children&apos;s Hospital</fullName>
            </value>
            <value>
                <fullName>Bostan Medical Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>