force-app/main/default/objects/Contact/fields/Target_Salary__c.field-meta.xml
<CustomField>
    <fullName>Target_Salary__c</fullName>
    <label>Target Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>